# uPRE

./: CMakeLists.txt
cmd/: CMakeLists.txt
common/: byte.h  configuration.h
compatible/: compatible_checker.cpp
fs/: blockchain.cpp  blockchain.h  items_storage.cpp  memory_storage.cpp  nt_item_simple_storage.h  nt_items_storage.h  storage.h
fs/ir_manager/: ir_processor.cpp
ir/nr/: nr_release_v1.cpp
jit/: jit_driver.cpp  jit_driver.h  jit_engine.cpp  jit_engine.h  jit_mangled_entry_point.cpp
runtime/auth/: auth_handler.cpp
test/: CMakeLists.txt  gtest_common.cpp  gtest_common.h
test/common/: gtest_ff_net.cpp
test/fs/: CMakeLists.txt  gtest_blockchain.cpp  gtest_fs_release.cpp  gtest_items_storage.cpp  gtest_nt_items_storage.cpp  gtest_rocksdb_session_storage.cpp  gtest_rocksdb_storage.cpp  gtest_util.cpp
test/fs/blockchain/: gtest_account_db.cpp  gtest_blockchain_api.cpp  gtest_transaction_db.cpp
test/fs/ir_manager/: gtest_ir_processor.cpp
test/fs/ir_manager/api/: gtest_auth_ir_list.cpp  gtest_dip_ir_list.cpp  gtest_nr_ir_list.cpp
test/fs/ir_manager/gen_block_transactions/: gen_without_missed_blocks.cpp  gen_without_missed_blocks.h
test/fs/ir_manager/gen_ir/: gen_auth_ir.cpp  gen_auth_ir.h  gen_dip_ir.cpp  gen_dip_ir.h  gen_nr_ir.cpp  gen_nr_ir.h
test/jit/: CMakeLists.txt  gtest_cpp_ir.cpp  gtest_jit_driver.cpp  gtest_jit_mangled_entry_point.cpp  gtest_jit_release.cpp  test_jit_mangled_entry_point.cpp
test/runtime/: CMakeLists.txt
test/util/: CMakeLists.txt  gtest_persistent_type.cpp
util/: bc_generator.cpp  persistent_type.h
(+14 files in other folders)
